--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.20.0",
+		"formik": "^2.2.4",
 		"jsonwebtoken": "^8.5.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
