--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"axios": "^0.20.0",
 		"formik": "^2.2.4",
 		"jsonwebtoken": "^8.5.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.2",
