--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@material-ui/core": "^4.11.0",
 		"@testing-library/jest-dom": "^5.11.5",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -19,7 +20,8 @@
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.1",
-		"web-vitals": "^0.2.4"
+		"web-vitals": "^0.2.4",
+		"yup": "^0.29.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
