--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
 		"axios": "^0.20.0",
 		"formik": "^2.2.4",
 		"jsonwebtoken": "^8.5.1",
+		"movie-trailer": "^2.0.6",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-fontawesome": "^1.7.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-youtube": "^7.13.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.1",
+		"styled-react-modal": "^2.0.1",
 		"web-vitals": "^0.2.4",
 		"yup": "^0.29.3"
 	},
