--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.1",
 		"@fortawesome/react-fontawesome": "^0.1.13",
 		"@material-ui/core": "^4.11.1",
+		"@material-ui/lab": "^4.0.0-alpha.57",
 		"@testing-library/jest-dom": "^5.11.5",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.20.0",
 		"formik": "^2.2.4",
 		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.20",
 		"movie-trailer": "^2.0.6",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-fontawesome": "^1.7.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
@@ -27,6 +28,7 @@
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.1",
 		"styled-react-modal": "^2.0.1",
+		"uuid": "^8.3.1",
 		"web-vitals": "^0.2.4",
 		"yup": "^0.29.3"
 	},
